# learn

./: .gitignore  README.md  a.out  class.cpp  country  country.cpp  space  space.cpp
animal/: AbstractAnimal.cpp  AbstractAnimal.h  Animal.cpp  Animal.h  Date.cpp  Date.h  MicAnimal.cpp  MicAnimal.h  main.cpp  testDate.cpp
deque/: Deque.cpp  Deque.h  main.cpp
folder/: header.cpp  header.h  main.cpp
graph/: in.txt  main.cpp
inputMethods/: in.txt  io.cpp  io.h  main  main.cpp
kr/: functional.cpp  functional.h  input.txt  io.cpp  io.h  main  main.cpp  output.txt
linkedList/: LinkedList.cpp  LinkedList.h  ll.cpp  main.cpp
ptr/: Book.cpp  Book.h  Library.cpp  Library.h  User.cpp  User.h  main.cpp
tema/: .gitignore  Rat.cpp  Rat.h  main  main.cpp
test_project/: CMakeLists.txt  f.cpp  main.cpp  test1.cpp
tree/: 1.txt  Tree.h  main.cpp
